--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,9 +15,7 @@ tauri-build = { version = "1.0.0-beta.4", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-beta.8", features = ["http-all"] }
-warp = "0.3.2"
-warp-reverse-proxy = "0.5"
+tauri = { version = "1.0.3", features = ["http-all"] }
 tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros"] }
 
 [features]
